--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,4 +1,11 @@
-steps:
-- uses: reviewdog/action-setup@v1
-  with:
-    reviewdog_version: latest # Optional. [latest,nightly,v.X.Y.Z]
+name: reviewdog
+on: [pull_request]
+jobs:
+  detect-secrets:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: detect-secrets
+      uses: reviewdog/action-detect-secrets@master
+      with:
+        reporter: github-pr-review # Change reporter.
